verify error handling for token updated
